--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.15.6",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
+    "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
